(7)  Added lazy processing in "vbm_surf_resample" and "vbm_surf_smooth" 
     (estimation only if files does not exist). 
------------------------------------------------------------------------
r698 | dahnke | 2015-06-02 10:40:03

M       CHANGES.txt
M       Makefile.vbm
M       cg_check_cov.m
M       html/vbm12.html

Corrected wrong surface-template folder in cg_check_cov.m.

------------------------------------------------------------------------
r699 | gaser | 2015-06-17 17:36:56

M       CHANGES.txt
M       vbm_surf_resample.m
M       vbm_surf_smooth.m

Always overwrite already written data in vbm_surf_resample.m and vbm_surf_smooth.m, otherwise users might 
oversee that message if they want to write updated data.

------------------------------------------------------------------------
r700 | gaser | 2015-06-17 17:46:36

M       CHANGES.txt
M       cg_vbm_run_job.m
M       cg_vbm_write.m
M       html/vbm12.html

(1) In cg_vbm_write.m changed some outputs of the log-page.
(2) Corrected typo in cg_vbm_run_job.m.

------------------------------------------------------------------------
r701 | gaser | 2015-06-18 17:33:40

M       CHANGES.txt
M       cg_vbm_write.m
M       html/vbm12.html

Forgot to remove some debugging code in cg_vbm_write.m.

------------------------------------------------------------------------
r702 | gaser | 2015-06-18 17:36:48

M       CHANGES.txt
M       cg_vbm_stoolsexp.m
M       ds.m
 M      templates_surfaces
M       vbm_io_writenii.m
M       vbm_stat_marks.m
M       vbm_surf_avg.m
M       vbm_surf_display.m
A       vbm_vol_isarnlm.m
M       vbm_vol_resize.m

(1)  Corrected error in "vbm_surf_display".
(2)  Deactivated mat0 changes in "vbm_io_writenii".
(3)  Added ISARNLM-filter to reduce parallel imaging artifacts. 
(4)  Added median reduction in "vbm_vol_resize".
------------------------------------------------------------------------
r703 | dahnke | 2015-07-07 09:09:52